= Change History

== 0.1.1 (in progress)

* Added support for NIO.2 sockets and file interfaces
* Added asynchronous proxy generator annotation processor
* Added PromiseTraceProvider that allows
* Some small, renames, and bug fixes
* TODO Changed to sonar for verification (default rule set)

== 0.1.0
Initial version