@@ -1,4 +1,4 @@
 *.iml
 .idea
-target
+target/
 /ext
